 $Id: ChangeLog,v 1.23 2004/03/20 14:31:12 mkern Exp $

2004-03-20  Markus Kern <mkern@users.berlios.de>

	* Added auto_search_more config option.
	* Tweaked supernode discovery.
	* Fixed shares upload limiting.

2004-03-11  Markus Kern <mkern@users.berlios.de>

	* Periodically ping supernode and disconnect after timeout.

2004-03-09  Markus Kern <mkern@users.berlios.de>

	* New url format.
	* Remove firewalled sources if our supernode changed.

2004-03-08  Markus Kern <mkern@users.berlios.de>

	* More UDP tweaks
	* Reply to protocol version notify.

2004-03-07  Markus Kern <mkern@users.berlios.de>

	* Added new kzhash. Calculated for shares and used for verification of
	  downloads if provided by the front end.

2004-03-03  Markus Kern <mkern@users.berlios.de>

	* Calculate availability based on reported bandwidth.
	* Let gift-setup handle the config file.
	* Check for invalid whitespaces in usernames.

2004-03-02  Markus Kern <mkern@users.berlios.de>

	* Don't sort out index nodes when saving node list.
	* Limit number of shared files so supernodes don't reject us.

2004-02-29  Markus Kern <mkern@users.berlios.de>

	* Rewrote UDP supernode discovery to work in parallel with TCP

2004-01-16  Markus Kern <mkern@users.berlios.de>

	* Added UDP supernode discovery

2003-11-27  Markus Kern <mkern@users.berlios.de>

	* Added sharing of files
	* Improved and activated Participation Level code (thanks Ashton)
	* Fixed memory leaks reported by Luna

2003-09-18  Markus Kern <mkern@users.berlios.de>

	* Added downloading from firewalled hosts
	* Rewrote search reply parsing and added user name decompression

2003-09-17  Markus Kern <mkern@users.berlios.de>

	* Added HTTP server. Doesn't do anything yet.

2003-09-12  Markus Kern <mkern@users.berlios.de>

	* Added filtering of bogus search results based on banlist

2003-09-11  Markus Kern <mkern@users.berlios.de>

	* Changed hash encoding from hex to base64
	* Changed url format. Old format still supported for now
